[package]
name = "quick"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quick"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.4.7", features = ["derive", "env"] }
jito-account-traits-derive = { git = "https://github.com/jito-foundation/restaking.git", branch = "master" }
jito-bytemuck = { git = "https://github.com/jito-foundation/restaking.git", branch = "master" }
jito-restaking-client = { git = "https://github.com/jito-foundation/restaking.git", branch = "master" }
jito-restaking-core = { git = "https://github.com/jito-foundation/restaking.git", branch = "master" }
jito-vault-client = { git = "https://github.com/jito-foundation/restaking.git", branch = "master" }
jito-vault-core = { git = "https://github.com/jito-foundation/restaking.git", branch = "master" }
jito-vault-sdk = { git = "https://github.com/jito-foundation/restaking.git", branch = "master" }
solana-account-decoder = "~1.18.0"
solana-client = "~1.18.0"
solana-sdk = "~1.18.0"
thiserror = "1.0.50"
tokio = { version = "1.40.0", features = ["full"] }
