[package]
name = "restaking-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "restaking-cli"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.86"
borsh = { version = "0.10.3" }
bytemuck = { version = "1.16.3", features = ["min_const_generics"] }
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive", "env"] }
clap-markdown = { version = "0.1.4" }
env_logger = "0.10.2"
jito-account-traits-derive = { git = "https://github.com/jito-foundation/restaking.git", branch = "master" }
jito-bytemuck = { git = "https://github.com/jito-foundation/restaking.git", branch = "master" }
jito-restaking-client = { git = "https://github.com/jito-foundation/restaking.git", branch = "master" }
jito-restaking-core = { git = "https://github.com/jito-foundation/restaking.git", branch = "master" }
jito-vault-client = { git = "https://github.com/jito-foundation/restaking.git", branch = "master" }
jito-vault-core = { git = "https://github.com/jito-foundation/restaking.git", branch = "master" }
jito-vault-sdk = { git = "https://github.com/jito-foundation/restaking.git", branch = "master" }
log = "0.4.22"
solana-account-decoder = "~1.18"
solana-cli-config = "~1.18"
solana-program = "~1.18"
solana-rpc-client = "~1.18"
solana-rpc-client-api = "~1.18"
solana-sdk = "~1.18"
spl-associated-token-account = { version = "2.2.0", features = ["no-entrypoint"] }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }

