[package]
name = "p-jsm-core"
description = "Pinocchio JSM Core library"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
readme = "./README.md"
repository = "https://github.com/aoikurokawa/p-jito-jsm-core"

[dependencies]
pinocchio = "0.8.4"
pinocchio-pubkey = "0.2.3"
pinocchio-system = "0.2.3"
